# 9_evaluation_selection_Project

./: .gitignore  Profiling.ipynb  Profiling.py  README.md  README.rst  noxfile.py  pyproject.toml
src/9_evaluation_selection_project/: pipeline.py  train.py
src/evaluation_selection_project/: data.py  pipeline.py  train.py
tests/: test_9_evaluation_selection_project.py  test_evaluation_selection_project.py
