[tool.poetry]
name = "9_evaluation_selection_Project"
version = "0.1.0"
description = ""
authors = ["Таисия Титова <melodi63@yandex.ru>"]

[tool.poetry.scripts]
train = "9_evaluation_selection_project.train:train"

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.1.3"
pandas = "^1.4.2"
black = "^22.3.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
